--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -4,6 +4,17 @@ body, html {
     scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+}
+
+@font-face {
+    font-family: 'Nanum Hand';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/nanumhand.ttf'); /* IE9 Compat Modes */
+}
+
 @font-face {
     font-family: 'PPNeueMontreal';
     font-style: normal;
@@ -16,6 +27,13 @@ body, html {
     font-style: normal;
     font-weight: 300;
     src: url('../fonts/PPNeueMontreal-Medium.otf'); /* IE9 Compat Modes */
+}
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
